--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Find My Place</title>
+    <title> Find My Place </title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="main">
-      <div class="main__sidebar">
-        <div class="main__sidebar-header">
-          <span class="main__sidebar-title">Find My Place</span>
+      <div class="main__navbar">
+        <div class="main__navbar-header">
+          <span class="main__navbar-title">Find My Place</span>
         </div>
         <form class="main__form" id="form">
           <input type="text" class="main__form-input" id="findAddress" placeholder="Type an Address" required>
@@ -22,16 +22,21 @@
         <div class="main__addressListDiv">
           
         </div>
-        <div class="main__sidebar-footer">
-          <span class="main__sidebar-footerTitle">Made with <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <button class="main__navbar-animationButton" onclick="animationList()">
+          <svg class="main__navbar-animationIcon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-double-up" role="img" viewBox="0 0 320 512"><path fill="currentColor" d="M177 255.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 351.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 425.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1zm-34-192L7 199.7c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l96.4-96.4 96.4 96.4c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9l-136-136c-9.2-9.4-24.4-9.4-33.8 0z"/>
+          </svg>
+        </button>
+      </div>
+        <div id="map"></div>
+        <div class="main__navbar-footer">
+          <span class="main__navbar-footerTitle">Made with <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M17.7207 3.81654C15.8028 -2.56226 9.56939 0.289436 9 3.47884C8.22083 0.101824 2.1373 -2.41218 0.27928 3.81654C-1.78852 10.7582 8.28077 16.9869 9 18C9.71924 17.1745 19.7885 10.6456 17.7207 3.81654" fill="#0E6C83"/>
             </svg>
             by Leandro Moura</span>
         </div>
-      </div>
-      <div id="map"></div>
+      
     </div>
     <script src="main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key={{ YOUR_KEY_HERE }}&libraries=places&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-XhYnXnsWYVM-Hr4SEclR-PLwz6LZR1k&libraries=places&callback=initMap"
     async defer></script>
   </body>
